--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
   </style>
 </head>
 <body>
-  <a class="toplink" href="decks.html">📚 Decks</a>
+  <a class="toplink" href="decks.html">Decks</a>
   <main class="app" id="app">
     <div class="shuffle-btn">
-      <button id="shuffleBtn">🔀 Shuffle</button>
+      <button id="shuffleBtn">Shuffle</button>
       <div class="card-counter" id="cardCounter">1/5</div>
     </div>
     <div class="card">
