--- a/syllabus.html
+++ b/syllabus.html
@@ -86,17 +86,9 @@
   <div class="container">
     <h1>Syllabus</h1>
     <div class="content">
-      <p>Welcome to Latin with Mr. Heise!</p>
-      
-      <p>Course objectives:</p>
-      <ul>
-        <li>Build foundational Latin vocabulary</li>
-        <li>Understand basic grammatical structures</li>
-        <li>Read and translate simple Latin texts</li>
-        <li>Appreciate Roman culture and history</li>
-      </ul>
-
-      <p>Practice regularly with the flashcard decks to reinforce your learning.</p>
+      <p style="text-align: center;">
+        <a href="syllabus.pdf" style="color: #fff; text-decoration: underline;" target="_blank">Click here</a>
+      </p>
     </div>
   </div>
 </body>
