--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </style>
 </head>
 <body>
-  <a class="toplink" href="decks.html">Decks</a>
+  <a class="toplink" href="decks.html">Fasciculī</a>
   <main class="app" id="app">
     <div class="shuffle-btn">
       <button id="shuffleBtn">Shuffle</button>
