--- a/decks.html
+++ b/decks.html
@@ -91,7 +91,7 @@
   <a class="back-link" href="index.html">← Back</a>
   
   <div class="container">
-    <h1>Dēlige tabulam</h1>
+    <h1>Elige fasciculum</h1>
     <div id="deckList" class="deck-list">
       <div class="loading">Loading decks...</div>
     </div>
