--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tiny Flashcards</title>
+  <title>Fasciculī</title></title>
   <style>
     :root { --bg:#000; --fg:#fff; --muted:#9a9a9a; }
     *{ box-sizing:border-box }
