--- a/decks.html
+++ b/decks.html
@@ -91,7 +91,10 @@
   <a class="back-link" href="index.html">← Back</a>
   
   <div class="container">
-    <h1>Elige fasciculum (Select a Deck)</h1>
+    <h1>
+  Elige fasciculum<br>
+  <small>(Select a Deck)</small>
+</h1>
     <div id="deckList" class="deck-list">
       <div class="loading">Loading decks...</div>
     </div>
