--- a/syllabus.html
+++ b/syllabus.html
@@ -12,14 +12,14 @@
       content:"";
       position: fixed;
       inset: 0;
-      background: url('bg.jpg') center/cover no-repeat;
+      background: #000;
       z-index: -2;
     }
 
     body {
       font-family:"Times New Roman", Georgia, serif;
-      color: var(--fg);
-      background: var(--bg);
+      color: #39ff14;
+      background: #000;
       display: grid;
       place-items: center;
       padding: 32px;
@@ -27,9 +27,6 @@
     }
 
     .container{ 
-      background: rgba(0,0,0,0.85);
-      padding: 40px 48px;
-      border-radius: 12px;
       max-width: 700px;
       width: 100%;
     }
@@ -87,7 +84,7 @@
     <h1>Syllabus</h1>
     <div class="content">
       <p style="text-align: center;">
-        <a href="syllabus.pdf" style="color: #fff; text-decoration: underline;" target="_blank">Click here</a>
+        <a href="syllabus.pdf" style="color: #39ff14; text-decoration: underline;" target="_blank">Click here</a>
       </p>
     </div>
   </div>
