--- a/decks.html
+++ b/decks.html
@@ -56,6 +56,13 @@
       transition: opacity 0.15s ease;
     }
 
+    .deck-list {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  text-align: center; /* ✅ center justify text */
+}
+
     .deck-list a:hover{
       opacity: 0.7;
     }
