--- a/decks.html
+++ b/decks.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Deck Selector - Latin Flashcards</title>
+  <title>Deck Selector</title>
   <style>
     :root { --bg:#000; --fg:#fff; }
     *{ box-sizing:border-box }
@@ -99,8 +99,8 @@
   
   <div class="container">
     <h1>
-  Elige fasciculum<br>
-  <small>(Select a Deck)</small>
+  "Elige fasciculum"<br>
+  <small style="opacity: 0.7;">Select a Deck</small>
 </h1>
     <div id="deckList" class="deck-list">
       <div class="loading">Loading decks...</div>
