--- a/decks.html
+++ b/decks.html
@@ -99,8 +99,8 @@
   
   <div class="container">
     <h1>
-  "Elige fasciculum"<br>
-  <small style="opacity: 0.7;">Select a Deck</small>
+  "Elige Fasciculum"<br>
+  <small style="opacity: 0.7;">(select a deck)</small>
 </h1>
     <div id="deckList" class="deck-list">
       <div class="loading">Loading decks...</div>
