--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
   </style>
 </head>
 <body>
+  <a class="topleft" href="syllabus.html">Syllabus</a>
+
+<style>
+.topleft{ position: fixed; top: 12px; left: 12px; color: var(--fg); text-decoration: none; border: 2px solid var(--fg); border-radius: 999px; padding: 6px 16px; font-size: 14px; background: rgba(0,0,0,0.6); transition: all 0.15s ease; z-index: 100; }
+.topleft:hover{ opacity: 0.7; }
+  
   <a class="toplink" href="decks.html">Fasciculī</a>
   <main class="app" id="app">
     <div class="shuffle-btn">
