--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="footer">
         <span class="footer-title">Mr. Heise's Latin Flashcards</span><br>
         <span style="opacity:0.7; font-size:12px; margin-top:8px; display:inline-block;">
-          → for Next / ← for Previous
+          Hit the space bar or → arrow for Next / ← for Previous
         </span>
       </div>
     </div>
